objects/Renewed_Contracts__c/Renewed_Contracts__c.object-meta.xml
<CustomObject>
    <description>Creates a relationship between one-to-many contracts to one-to-many opportunities</description>
    <label>Renewed Contracts</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Opportunity Contracts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewed Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>