objects/Renewed_Contracts__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <inlineHelpText>The status of the contract</inlineHelpText>
    <label>Contract Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>