objects/Renewed_Contracts__c/fields/Exit_ARR__c.field-meta.xml
<CustomField>
    <fullName>Exit_ARR__c</fullName>
    <inlineHelpText>The amount of the Exit ARR for this contract</inlineHelpText>
    <label>Exit ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>