objects/Renewed_Contracts__c/fields/Exit_ARR_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Exit_ARR_Adjustment__c</fullName>
    <formula>Contract__r.Exit_ARR_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of the adjustment that was made on Exit ARR on the contract record</inlineHelpText>
    <label>Exit ARR Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>