objects/Renewed_Contracts__c/fields/Renewed_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Contract_End_Date__c</fullName>
    <description>This field will be used as a way to populate the Renewal Expiration Date on the Opportunity</description>
    <inlineHelpText>The End Date of this Contract</inlineHelpText>
    <label>Renewed Contract End Date</label>
    <type>Date</type>
</CustomField>